--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -44,7 +44,8 @@ h1 {
 	font-size: 1.5em;
 	font-weight: bold;
 	width: 100%;
-	border-top: 5px solid black;
+	border-top: 2px solid black;
+	padding-top: 3px;
 }
 
 div.step {
